--- a/sorting-algorithms.ipynb
+++ b/sorting-algorithms.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOjKtmljm9YdRz9OFiI1X1S",
+      "authorship_tag": "ABX9TyOf5v4VLZlIU0M99EFrRAg4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,7 +97,7 @@
       "metadata": {
         "id": "CKvRwEywWevc"
       },
-      "execution_count": 106,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -143,7 +143,7 @@
       "metadata": {
         "id": "4T31CnAXbu3Y"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -191,7 +191,7 @@
       "metadata": {
         "id": "KArZUPlJWkFo"
       },
-      "execution_count": 107,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -241,7 +241,7 @@
       "metadata": {
         "id": "XHyFdmVpXdCc"
       },
-      "execution_count": 108,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -296,7 +296,7 @@
       "metadata": {
         "id": "yeSdRggAd1f5"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -328,7 +328,7 @@
       "metadata": {
         "id": "arpunYrmd4hK"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -339,15 +339,6 @@
       "metadata": {
         "id": "SAY8LAOFXN2W"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Sl9hcW7Fd5gN"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -383,9 +374,9 @@
         },
         "collapsed": true,
         "id": "zee0SQ-BWRrg",
-        "outputId": "88be3005-d03a-4eba-fcaf-edcb78c028de"
+        "outputId": "01b6afea-df45-40a9-9ee2-77ef41d41d9a"
       },
-      "execution_count": 109,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -393,50 +384,46 @@
           "text": [
             "----------Selection Sort Example----------\n",
             "\n",
-            "Enter 'L' for random letters or 'N' for random numbers: N\n",
-            "Enter 'M' to manually input numbers or 'R' for random: r\n",
-            "How many random numbers do you want? 6\n",
+            "Enter 'L' for random letters or 'N' for random numbers: L\n",
+            "Enter 'M' to manually input letters or 'R' for random: R\n",
+            "How many random uppercase letters do you want? 5\n",
             "Thank You.\n",
-            "You have chosen to see an example with numbers 👏🏼. Let's explore.\n",
+            "You have chosen to see an example with letters 👏🏼. Let's explore.\n",
             "\n",
             "Applying Selection Sort 🙌🏻\n",
             "\n",
             "Initial List:\n",
-            "[34, 17, 77, 12, 73, 36]\n",
+            "['V', 'O', 'G', 'Z', 'N']\n",
             "\n",
             "Pass 1:\n",
-            "i=0| Cur Min [0 => 34]\n",
-            "j=1| New Min [1 => 17]\n",
-            "j=3| New Min [3 => 12]\n",
-            "[\u001b[4m12\u001b[0m, 17, 77, \u001b[4m34\u001b[0m, 73, 36] ✅\n",
+            "i=0| Cur Min [0 => V]\n",
+            "j=1| New Min [1 => O]\n",
+            "j=2| New Min [2 => G]\n",
+            "[\u001b[4mG\u001b[0m, O, \u001b[4mV\u001b[0m, Z, N] ✅\n",
             "\n",
             "Pass 2:\n",
-            "i=1| Cur Min [1 => 17]\n",
-            "[12, \u001b[4m17\u001b[0m, 77, 34, 73, 36] ❌\n",
+            "i=1| Cur Min [1 => O]\n",
+            "j=4| New Min [4 => N]\n",
+            "[G, \u001b[4mN\u001b[0m, V, Z, \u001b[4mO\u001b[0m] ✅\n",
             "\n",
             "Pass 3:\n",
-            "i=2| Cur Min [2 => 77]\n",
-            "j=3| New Min [3 => 34]\n",
-            "[12, 17, \u001b[4m34\u001b[0m, \u001b[4m77\u001b[0m, 73, 36] ✅\n",
+            "i=2| Cur Min [2 => V]\n",
+            "j=4| New Min [4 => O]\n",
+            "[G, N, \u001b[4mO\u001b[0m, Z, \u001b[4mV\u001b[0m] ✅\n",
             "\n",
             "Pass 4:\n",
-            "i=3| Cur Min [3 => 77]\n",
-            "j=4| New Min [4 => 73]\n",
-            "j=5| New Min [5 => 36]\n",
-            "[12, 17, 34, \u001b[4m36\u001b[0m, 73, \u001b[4m77\u001b[0m] ✅\n",
+            "i=3| Cur Min [3 => Z]\n",
+            "j=4| New Min [4 => V]\n",
+            "[G, N, O, \u001b[4mV\u001b[0m, \u001b[4mZ\u001b[0m] ✅\n",
             "\n",
             "Pass 5:\n",
-            "i=4| Cur Min [4 => 73]\n",
-            "[12, 17, 34, 36, \u001b[4m73\u001b[0m, 77] ❌\n",
-            "\n",
-            "Pass 6:\n",
-            "i=5| Cur Min [5 => 77]\n",
-            "[12, 17, 34, 36, 73, \u001b[4m77\u001b[0m] ❌\n",
+            "i=4| Cur Min [4 => Z]\n",
+            "[G, N, O, V, \u001b[4mZ\u001b[0m] ❌\n",
             "\n",
             "Ascending 👇🏻 Selection Sort Result 😇\n",
-            "[12, 17, 34, 36, 73, 77]\n",
-            "Time Taken: 0.000207 seconds\n",
-            "Space Complexity: O(1) (in-place sorting, only a few variables used)\n"
+            "['G', 'N', 'O', 'V', 'Z']\n",
+            "Time Taken: 0.000251 seconds\n",
+            "\n"
           ]
         }
       ]
