Update Merge Sort with appropriate helping coments in outputs.

--- a/python/sorting-algorithms.ipynb
+++ b/python/sorting-algorithms.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOf5v4VLZlIU0M99EFrRAg4",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNwsuv+TKnQvoiXYuH1kWPy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,13 +24,13 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/biswabijaya/rewind-CS50/blob/biswa/sorting-algorithms.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/biswabijaya/rewind-CS50/blob/biswa/python/sorting-algorithms.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Standard input handiling functions"
+        "# Standard input handiling functions"
       ],
       "metadata": {
         "id": "p1w8Qd5CW0MH"
@@ -92,18 +93,18 @@
         "\n",
         "# Greetings\n",
         "def greetings(type_):\n",
-        "    print(f\"Thank You.\\nYou have chosen to see an example with {type_} 👏🏼. Let's explore.\")"
+        "    print(f\"Thank You.\\nYou have chosen to see an example with {type_} 👏🏼. Let's explore. \\n\")"
       ],
       "metadata": {
         "id": "CKvRwEywWevc"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Time and Space Complexity Calculations"
+        "# Time and Space Complexity Calculations"
       ],
       "metadata": {
         "id": "vPgQa6YvbuwD"
@@ -126,7 +127,7 @@
         "\n",
         "    # Calculate time taken\n",
         "    time_taken = end_time - start_time\n",
-        "    print(f\"Time Taken: {time_taken:.6f} seconds\")\n",
+        "    print(f\"\\nTime Taken ⌛️: {time_taken:.6f} seconds\")\n",
         "\n",
         "    # Space Complexity handling for different algorithms based on function name\n",
         "    if func_name == \"selection_sort\":\n",
@@ -143,16 +144,25 @@
       "metadata": {
         "id": "4T31CnAXbu3Y"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Bubble Sort Algorithm"
+        "# Sorting Algos"
       ],
       "metadata": {
-        "id": "FUs6icFvXAlW"
+        "id": "zF5F4ZXhdXwL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Bubble Sort"
+      ],
+      "metadata": {
+        "id": "mdLPEtvbcqRv"
       }
     },
     {
@@ -191,16 +201,16 @@
       "metadata": {
         "id": "KArZUPlJWkFo"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Selection Sort Algorithm"
+        "## Selection Sort"
       ],
       "metadata": {
-        "id": "MTxSDAy1cU5B"
+        "id": "76lso7J2cuTj"
       }
     },
     {
@@ -241,13 +251,13 @@
       "metadata": {
         "id": "XHyFdmVpXdCc"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Merge Sort Algorithm"
+        "## Merge Sort"
       ],
       "metadata": {
         "id": "gOBxLBumdkx4"
@@ -257,16 +267,16 @@
       "cell_type": "code",
       "source": [
         "# Optimized Merge Sort with Step-by-Step Explanation\n",
-        "def merge_sort(arr):\n",
+        "def merge_sort(arr, side=\"L\", depth=0):\n",
         "    if len(arr) > 1:\n",
         "        mid = len(arr) // 2\n",
         "        left_half = arr[:mid]\n",
         "        right_half = arr[mid:]\n",
         "\n",
-        "        print(f\"Splitting: {arr} into {left_half} and {right_half}\")\n",
+        "        print(f\"SPLIT😡: {side}{depth}{arr} ===> L{depth+1}{left_half} ⬅️➡️ R{depth+1}{right_half}\")\n",
         "\n",
-        "        merge_sort(left_half)\n",
-        "        merge_sort(right_half)\n",
+        "        merge_sort(left_half, \"L\", depth+1)\n",
+        "        merge_sort(right_half, \"R\", depth+1)\n",
         "\n",
         "        i = j = k = 0\n",
         "\n",
@@ -289,20 +299,20 @@
         "            j += 1\n",
         "            k += 1\n",
         "\n",
-        "        print(f\"Merging: {left_half} and {right_half} into {arr}\")\n",
+        "        print(f\"MERGE😊: {side}{depth}{arr} <=== {side}{depth+1}{left_half} ➡️⬅️ {side}{depth+1}{right_half}\")\n",
         "\n",
-        "    print(f\"\\nAscending 👇🏻 Merge Sort Result 😇\\n{arr}\")\n"
+        "    print(f\"SORTED✅ {side}{depth}{arr} \", \"☘️\" * len(arr))\n"
       ],
       "metadata": {
         "id": "yeSdRggAd1f5"
       },
-      "execution_count": 5,
+      "execution_count": 44,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Quick Sort Algorithm"
+        "## Quick Sort"
       ],
       "metadata": {
         "id": "c00KIuoqdlDC"
@@ -328,13 +338,13 @@
       "metadata": {
         "id": "arpunYrmd4hK"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Main program"
+        "# Main"
       ],
       "metadata": {
         "id": "SAY8LAOFXN2W"
@@ -355,7 +365,7 @@
         "        if numbers:\n",
         "            greetings(\"numbers\")\n",
         "            # measure_time_space(bubble_sort, numbers)\n",
-        "            measure_time_space(selection_sort, numbers)\n",
+        "            measure_time_space(merge_sort, numbers)\n",
         "        break\n",
         "    elif choice == 'L':\n",
         "        input_choice = get_input_choice(\"letters\")\n",
@@ -363,7 +373,7 @@
         "        if letters:\n",
         "            greetings(\"letters\")\n",
         "            # measure_time_space(bubble_sort, letters)\n",
-        "            measure_time_space(selection_sort, letters)\n",
+        "            measure_time_space(merge_sort, letters)\n",
         "        break\n",
         "    else:\n",
         "        print(\"Invalid choice. Please enter 'L' for letters or 'N' for numbers.\")"
@@ -374,9 +384,9 @@
         },
         "collapsed": true,
         "id": "zee0SQ-BWRrg",
-        "outputId": "01b6afea-df45-40a9-9ee2-77ef41d41d9a"
+        "outputId": "83319f61-cba5-40b7-919d-15a87779ca90"
       },
-      "execution_count": 7,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -384,45 +394,57 @@
           "text": [
             "----------Selection Sort Example----------\n",
             "\n",
-            "Enter 'L' for random letters or 'N' for random numbers: L\n",
-            "Enter 'M' to manually input letters or 'R' for random: R\n",
-            "How many random uppercase letters do you want? 5\n",
+            "Enter 'L' for random letters or 'N' for random numbers: N\n",
+            "Enter 'M' to manually input numbers or 'R' for random: R\n",
+            "How many random numbers do you want? 12\n",
             "Thank You.\n",
-            "You have chosen to see an example with letters 👏🏼. Let's explore.\n",
-            "\n",
-            "Applying Selection Sort 🙌🏻\n",
-            "\n",
-            "Initial List:\n",
-            "['V', 'O', 'G', 'Z', 'N']\n",
-            "\n",
-            "Pass 1:\n",
-            "i=0| Cur Min [0 => V]\n",
-            "j=1| New Min [1 => O]\n",
-            "j=2| New Min [2 => G]\n",
-            "[\u001b[4mG\u001b[0m, O, \u001b[4mV\u001b[0m, Z, N] ✅\n",
-            "\n",
-            "Pass 2:\n",
-            "i=1| Cur Min [1 => O]\n",
-            "j=4| New Min [4 => N]\n",
-            "[G, \u001b[4mN\u001b[0m, V, Z, \u001b[4mO\u001b[0m] ✅\n",
-            "\n",
-            "Pass 3:\n",
-            "i=2| Cur Min [2 => V]\n",
-            "j=4| New Min [4 => O]\n",
-            "[G, N, \u001b[4mO\u001b[0m, Z, \u001b[4mV\u001b[0m] ✅\n",
-            "\n",
-            "Pass 4:\n",
-            "i=3| Cur Min [3 => Z]\n",
-            "j=4| New Min [4 => V]\n",
-            "[G, N, O, \u001b[4mV\u001b[0m, \u001b[4mZ\u001b[0m] ✅\n",
-            "\n",
-            "Pass 5:\n",
-            "i=4| Cur Min [4 => Z]\n",
-            "[G, N, O, V, \u001b[4mZ\u001b[0m] ❌\n",
-            "\n",
-            "Ascending 👇🏻 Selection Sort Result 😇\n",
-            "['G', 'N', 'O', 'V', 'Z']\n",
-            "Time Taken: 0.000251 seconds\n",
+            "You have chosen to see an example with numbers 👏🏼. Let's explore.\n",
+            "SPLIT😡: L0[24, 91, 92, 13, 80, 31, 23, 66, 20, 16, 76, 46] ===> L1[24, 91, 92, 13, 80, 31] ⬅️➡️ R1[23, 66, 20, 16, 76, 46]\n",
+            "SPLIT😡: L1[24, 91, 92, 13, 80, 31] ===> L2[24, 91, 92] ⬅️➡️ R2[13, 80, 31]\n",
+            "SPLIT😡: L2[24, 91, 92] ===> L3[24] ⬅️➡️ R3[91, 92]\n",
+            "SORTED✅ L3[24]  ☘️\n",
+            "SPLIT😡: R3[91, 92] ===> L4[91] ⬅️➡️ R4[92]\n",
+            "SORTED✅ L4[91]  ☘️\n",
+            "SORTED✅ R4[92]  ☘️\n",
+            "MERGE😊: R3[91, 92] <=== R4[91] ➡️⬅️ R4[92]\n",
+            "SORTED✅ R3[91, 92]  ☘️☘️\n",
+            "MERGE😊: L2[24, 91, 92] <=== L3[24] ➡️⬅️ L3[91, 92]\n",
+            "SORTED✅ L2[24, 91, 92]  ☘️☘️☘️\n",
+            "SPLIT😡: R2[13, 80, 31] ===> L3[13] ⬅️➡️ R3[80, 31]\n",
+            "SORTED✅ L3[13]  ☘️\n",
+            "SPLIT😡: R3[80, 31] ===> L4[80] ⬅️➡️ R4[31]\n",
+            "SORTED✅ L4[80]  ☘️\n",
+            "SORTED✅ R4[31]  ☘️\n",
+            "MERGE😊: R3[31, 80] <=== R4[80] ➡️⬅️ R4[31]\n",
+            "SORTED✅ R3[31, 80]  ☘️☘️\n",
+            "MERGE😊: R2[13, 31, 80] <=== R3[13] ➡️⬅️ R3[31, 80]\n",
+            "SORTED✅ R2[13, 31, 80]  ☘️☘️☘️\n",
+            "MERGE😊: L1[13, 24, 31, 80, 91, 92] <=== L2[24, 91, 92] ➡️⬅️ L2[13, 31, 80]\n",
+            "SORTED✅ L1[13, 24, 31, 80, 91, 92]  ☘️☘️☘️☘️☘️☘️\n",
+            "SPLIT😡: R1[23, 66, 20, 16, 76, 46] ===> L2[23, 66, 20] ⬅️➡️ R2[16, 76, 46]\n",
+            "SPLIT😡: L2[23, 66, 20] ===> L3[23] ⬅️➡️ R3[66, 20]\n",
+            "SORTED✅ L3[23]  ☘️\n",
+            "SPLIT😡: R3[66, 20] ===> L4[66] ⬅️➡️ R4[20]\n",
+            "SORTED✅ L4[66]  ☘️\n",
+            "SORTED✅ R4[20]  ☘️\n",
+            "MERGE😊: R3[20, 66] <=== R4[66] ➡️⬅️ R4[20]\n",
+            "SORTED✅ R3[20, 66]  ☘️☘️\n",
+            "MERGE😊: L2[20, 23, 66] <=== L3[23] ➡️⬅️ L3[20, 66]\n",
+            "SORTED✅ L2[20, 23, 66]  ☘️☘️☘️\n",
+            "SPLIT😡: R2[16, 76, 46] ===> L3[16] ⬅️➡️ R3[76, 46]\n",
+            "SORTED✅ L3[16]  ☘️\n",
+            "SPLIT😡: R3[76, 46] ===> L4[76] ⬅️➡️ R4[46]\n",
+            "SORTED✅ L4[76]  ☘️\n",
+            "SORTED✅ R4[46]  ☘️\n",
+            "MERGE😊: R3[46, 76] <=== R4[76] ➡️⬅️ R4[46]\n",
+            "SORTED✅ R3[46, 76]  ☘️☘️\n",
+            "MERGE😊: R2[16, 46, 76] <=== R3[16] ➡️⬅️ R3[46, 76]\n",
+            "SORTED✅ R2[16, 46, 76]  ☘️☘️☘️\n",
+            "MERGE😊: R1[16, 20, 23, 46, 66, 76] <=== R2[20, 23, 66] ➡️⬅️ R2[16, 46, 76]\n",
+            "SORTED✅ R1[16, 20, 23, 46, 66, 76]  ☘️☘️☘️☘️☘️☘️\n",
+            "MERGE😊: L0[13, 16, 20, 23, 24, 31, 46, 66, 76, 80, 91, 92] <=== L1[13, 24, 31, 80, 91, 92] ➡️⬅️ L1[16, 20, 23, 46, 66, 76]\n",
+            "SORTED✅ L0[13, 16, 20, 23, 24, 31, 46, 66, 76, 80, 91, 92]  ☘️☘️☘️☘️☘️☘️☘️☘️☘️☘️☘️☘️\n",
+            "Time Taken: 0.000340 seconds\n",
             "\n"
           ]
         }
