--- a/python/sorting-algorithms.ipynb
+++ b/python/sorting-algorithms.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP4A20t/Q5BQ7MjiIXRDl6j",
+      "authorship_tag": "ABX9TyNziZnqM92i0XXeGxg45bDm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -99,7 +99,7 @@
       "metadata": {
         "id": "CKvRwEywWevc"
       },
-      "execution_count": 67,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -133,10 +133,12 @@
         "    print(f\"\\nTime Taken ⌛️: {time_taken:.6f} seconds\")\n",
         "\n",
         "    # Space Complexity handling for different algorithms based on function name\n",
-        "    if func_name == \"selection_sort\":\n",
-        "        print(\"Selection Sort | Space Complexity: O(1) (in-place sorting, only a few variables used)\")\n",
-        "    elif func_name == \"bubble_sort\":\n",
+        "    if func_name == \"bubble_sort\":\n",
         "        print(\"Bubble Sort | Space Complexity: O(1) (in-place sorting, only a few variables used)\")\n",
+        "    elif func_name == \"insertion_sort\":\n",
+        "        print(\"Insertion Sort | Space Complexity: O(1) (in-place sorting, only a few variables used)\")\n",
+        "    elif func_name == \"selection_sort\":\n",
+        "        print(\"Selection Sort | Space Complexity: O(1) (in-place sorting, only a few variables used)\")\n",
         "    elif func_name == \"merge_sort\":\n",
         "        print(\"Merge Sort | Space Complexity: O(n) (extra space needed for merging subarrays)\")\n",
         "    elif func_name == \"quick_sort\":\n",
@@ -152,7 +154,7 @@
       "metadata": {
         "id": "4T31CnAXbu3Y"
       },
-      "execution_count": 66,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -210,6 +212,60 @@
         "id": "KArZUPlJWkFo"
       },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Insertion Sort"
+      ],
+      "metadata": {
+        "id": "hdoJvAaGoBwL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Optimized Insertion Sort with Step-by-Step Explanation\n",
+        "def insertion_sort(arr):\n",
+        "    n = len(arr)\n",
+        "    print(f\"\\nApplying Insertion Sort 🙌🏻\")\n",
+        "\n",
+        "    for i in range(1, n):  # Start from the second element\n",
+        "        key = arr[i]\n",
+        "        j = i - 1\n",
+        "\n",
+        "        print(f\"\\nIteration {i} : [Key={key}]\")\n",
+        "\n",
+        "        while j >= 0 and key < arr[j]:\n",
+        "            arr[j + 1] = arr[j]\n",
+        "            j -= 1\n",
+        "\n",
+        "            # Format output with underlined shifted elements\n",
+        "            formatted_list = [\n",
+        "                f\"\\x1B[4m{x}\\x1B[0m\" if k == j + 1 else str(x)\n",
+        "                for k, x in enumerate(arr)\n",
+        "            ]\n",
+        "            print(f\"Shifting Val: [{', '.join(formatted_list)}]\")\n",
+        "\n",
+        "\n",
+        "        arr[j + 1] = key  # Insert the key in its correct position\n",
+        "\n",
+        "        # Format the final list for this iteration with the key highlighted\n",
+        "        formatted_list = [\n",
+        "            f\"\\x1B[32m{x}\\x1B[0m\" if k == j + 1 else str(x) #Highlight the key in green\n",
+        "            for k, x in enumerate(arr)\n",
+        "        ]\n",
+        "        print(f\"Inserted Key: [{', '.join(formatted_list)}]\")\n",
+        "\n",
+        "\n",
+        "    print(f\"\\nAscending 👇🏻 Insertion Result 😇\\n{arr}\")\n",
+        "    # return arr\n"
+      ],
+      "metadata": {
+        "id": "zXoHgsbgoQlg"
+      },
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -431,7 +487,7 @@
         "        if numbers:\n",
         "            greetings(\"numbers\", numbers)\n",
         "            # measure_time_space(bubble_sort, numbers)\n",
-        "            measure_time_space(counting_sort, numbers)\n",
+        "            measure_time_space(insertion_sort, numbers)\n",
         "        break\n",
         "    elif choice == 'L':\n",
         "        input_choice = get_input_choice(\"letters\")\n",
@@ -439,7 +495,7 @@
         "        if letters:\n",
         "            greetings(\"letters\", letters)\n",
         "            # measure_time_space(bubble_sort, letters)\n",
-        "            measure_time_space(counting_sort, letters)\n",
+        "            measure_time_space(insertion_sort, letters)\n",
         "        break\n",
         "    else:\n",
         "        print(\"Invalid choice. Please enter 'L' for letters or 'N' for numbers.\")"
@@ -450,9 +506,9 @@
         },
         "collapsed": true,
         "id": "zee0SQ-BWRrg",
-        "outputId": "727ddb78-94bf-40cd-8274-2d6adf81156b"
+        "outputId": "0fae347b-9f63-4058-9d77-9897e2fda8c2"
       },
-      "execution_count": 69,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -464,25 +520,85 @@
             "Thank You.\n",
             "You have chosen to see an example with numbers 👏🏼. Let's explore. \n",
             "\n",
-            "Input Array =====> [79, 14, 84, 21, 74, 65, 51, 92, 35, 70, 62, 11]\n",
+            "Input Array =====> [78, 98, 27, 92, 11, 46, 79, 90, 84, 68, 69, 64]\n",
             "\n",
-            "Applying Counting Sort 🙌🏻\n",
+            "Applying Insertion Sort 🙌🏻\n",
             "\n",
-            "Initial List:\n",
-            "[79, 14, 84, 21, 74, 65, 51, 92, 35, 70, 62, 11]\n",
-            "Max Element ⬆️: 92, Min Element ⬇️: 11\n",
-            "Range of Elements: 82\n",
-            "Initialized count array: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-            "Count array after counting elements: [1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1]\n",
-            "Modified count array (cumulative counts): [1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 6, 6, 6, 7, 7, 7, 7, 7, 8, 8, 8, 8, 9, 9, 9, 9, 9, 10, 10, 10, 10, 10, 11, 11, 11, 11, 11, 11, 11, 11, 12]\n",
-            "Initialized output array: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-            "Output array after sorting: [11, 14, 21, 35, 51, 62, 65, 70, 74, 79, 84, 92]\n",
+            "Iteration 1 : [Key=98]\n",
+            "Inserted Key: [78, \u001b[32m98\u001b[0m, 27, 92, 11, 46, 79, 90, 84, 68, 69, 64]\n",
             "\n",
-            "Ascending 👇🏻 Counting Sort Result 😇\n",
-            "[11, 14, 21, 35, 51, 62, 65, 70, 74, 79, 84, 92]\n",
-            "Output Array ====> [11, 14, 21, 35, 51, 62, 65, 70, 74, 79, 84, 92]\n",
+            "Iteration 2 : [Key=27]\n",
+            "Shifting Val: [78, \u001b[4m98\u001b[0m, 98, 92, 11, 46, 79, 90, 84, 68, 69, 64]\n",
+            "Shifting Val: [\u001b[4m78\u001b[0m, 78, 98, 92, 11, 46, 79, 90, 84, 68, 69, 64]\n",
+            "Inserted Key: [\u001b[32m27\u001b[0m, 78, 98, 92, 11, 46, 79, 90, 84, 68, 69, 64]\n",
             "\n",
-            "Time Taken ⌛️: 0.000104 seconds\n",
+            "Iteration 3 : [Key=92]\n",
+            "Shifting Val: [27, 78, \u001b[4m98\u001b[0m, 98, 11, 46, 79, 90, 84, 68, 69, 64]\n",
+            "Inserted Key: [27, 78, \u001b[32m92\u001b[0m, 98, 11, 46, 79, 90, 84, 68, 69, 64]\n",
+            "\n",
+            "Iteration 4 : [Key=11]\n",
+            "Shifting Val: [27, 78, 92, \u001b[4m98\u001b[0m, 98, 46, 79, 90, 84, 68, 69, 64]\n",
+            "Shifting Val: [27, 78, \u001b[4m92\u001b[0m, 92, 98, 46, 79, 90, 84, 68, 69, 64]\n",
+            "Shifting Val: [27, \u001b[4m78\u001b[0m, 78, 92, 98, 46, 79, 90, 84, 68, 69, 64]\n",
+            "Shifting Val: [\u001b[4m27\u001b[0m, 27, 78, 92, 98, 46, 79, 90, 84, 68, 69, 64]\n",
+            "Inserted Key: [\u001b[32m11\u001b[0m, 27, 78, 92, 98, 46, 79, 90, 84, 68, 69, 64]\n",
+            "\n",
+            "Iteration 5 : [Key=46]\n",
+            "Shifting Val: [11, 27, 78, 92, \u001b[4m98\u001b[0m, 98, 79, 90, 84, 68, 69, 64]\n",
+            "Shifting Val: [11, 27, 78, \u001b[4m92\u001b[0m, 92, 98, 79, 90, 84, 68, 69, 64]\n",
+            "Shifting Val: [11, 27, \u001b[4m78\u001b[0m, 78, 92, 98, 79, 90, 84, 68, 69, 64]\n",
+            "Inserted Key: [11, 27, \u001b[32m46\u001b[0m, 78, 92, 98, 79, 90, 84, 68, 69, 64]\n",
+            "\n",
+            "Iteration 6 : [Key=79]\n",
+            "Shifting Val: [11, 27, 46, 78, 92, \u001b[4m98\u001b[0m, 98, 90, 84, 68, 69, 64]\n",
+            "Shifting Val: [11, 27, 46, 78, \u001b[4m92\u001b[0m, 92, 98, 90, 84, 68, 69, 64]\n",
+            "Inserted Key: [11, 27, 46, 78, \u001b[32m79\u001b[0m, 92, 98, 90, 84, 68, 69, 64]\n",
+            "\n",
+            "Iteration 7 : [Key=90]\n",
+            "Shifting Val: [11, 27, 46, 78, 79, 92, \u001b[4m98\u001b[0m, 98, 84, 68, 69, 64]\n",
+            "Shifting Val: [11, 27, 46, 78, 79, \u001b[4m92\u001b[0m, 92, 98, 84, 68, 69, 64]\n",
+            "Inserted Key: [11, 27, 46, 78, 79, \u001b[32m90\u001b[0m, 92, 98, 84, 68, 69, 64]\n",
+            "\n",
+            "Iteration 8 : [Key=84]\n",
+            "Shifting Val: [11, 27, 46, 78, 79, 90, 92, \u001b[4m98\u001b[0m, 98, 68, 69, 64]\n",
+            "Shifting Val: [11, 27, 46, 78, 79, 90, \u001b[4m92\u001b[0m, 92, 98, 68, 69, 64]\n",
+            "Shifting Val: [11, 27, 46, 78, 79, \u001b[4m90\u001b[0m, 90, 92, 98, 68, 69, 64]\n",
+            "Inserted Key: [11, 27, 46, 78, 79, \u001b[32m84\u001b[0m, 90, 92, 98, 68, 69, 64]\n",
+            "\n",
+            "Iteration 9 : [Key=68]\n",
+            "Shifting Val: [11, 27, 46, 78, 79, 84, 90, 92, \u001b[4m98\u001b[0m, 98, 69, 64]\n",
+            "Shifting Val: [11, 27, 46, 78, 79, 84, 90, \u001b[4m92\u001b[0m, 92, 98, 69, 64]\n",
+            "Shifting Val: [11, 27, 46, 78, 79, 84, \u001b[4m90\u001b[0m, 90, 92, 98, 69, 64]\n",
+            "Shifting Val: [11, 27, 46, 78, 79, \u001b[4m84\u001b[0m, 84, 90, 92, 98, 69, 64]\n",
+            "Shifting Val: [11, 27, 46, 78, \u001b[4m79\u001b[0m, 79, 84, 90, 92, 98, 69, 64]\n",
+            "Shifting Val: [11, 27, 46, \u001b[4m78\u001b[0m, 78, 79, 84, 90, 92, 98, 69, 64]\n",
+            "Inserted Key: [11, 27, 46, \u001b[32m68\u001b[0m, 78, 79, 84, 90, 92, 98, 69, 64]\n",
+            "\n",
+            "Iteration 10 : [Key=69]\n",
+            "Shifting Val: [11, 27, 46, 68, 78, 79, 84, 90, 92, \u001b[4m98\u001b[0m, 98, 64]\n",
+            "Shifting Val: [11, 27, 46, 68, 78, 79, 84, 90, \u001b[4m92\u001b[0m, 92, 98, 64]\n",
+            "Shifting Val: [11, 27, 46, 68, 78, 79, 84, \u001b[4m90\u001b[0m, 90, 92, 98, 64]\n",
+            "Shifting Val: [11, 27, 46, 68, 78, 79, \u001b[4m84\u001b[0m, 84, 90, 92, 98, 64]\n",
+            "Shifting Val: [11, 27, 46, 68, 78, \u001b[4m79\u001b[0m, 79, 84, 90, 92, 98, 64]\n",
+            "Shifting Val: [11, 27, 46, 68, \u001b[4m78\u001b[0m, 78, 79, 84, 90, 92, 98, 64]\n",
+            "Inserted Key: [11, 27, 46, 68, \u001b[32m69\u001b[0m, 78, 79, 84, 90, 92, 98, 64]\n",
+            "\n",
+            "Iteration 11 : [Key=64]\n",
+            "Shifting Val: [11, 27, 46, 68, 69, 78, 79, 84, 90, 92, \u001b[4m98\u001b[0m, 98]\n",
+            "Shifting Val: [11, 27, 46, 68, 69, 78, 79, 84, 90, \u001b[4m92\u001b[0m, 92, 98]\n",
+            "Shifting Val: [11, 27, 46, 68, 69, 78, 79, 84, \u001b[4m90\u001b[0m, 90, 92, 98]\n",
+            "Shifting Val: [11, 27, 46, 68, 69, 78, 79, \u001b[4m84\u001b[0m, 84, 90, 92, 98]\n",
+            "Shifting Val: [11, 27, 46, 68, 69, 78, \u001b[4m79\u001b[0m, 79, 84, 90, 92, 98]\n",
+            "Shifting Val: [11, 27, 46, 68, 69, \u001b[4m78\u001b[0m, 78, 79, 84, 90, 92, 98]\n",
+            "Shifting Val: [11, 27, 46, 68, \u001b[4m69\u001b[0m, 69, 78, 79, 84, 90, 92, 98]\n",
+            "Shifting Val: [11, 27, 46, \u001b[4m68\u001b[0m, 68, 69, 78, 79, 84, 90, 92, 98]\n",
+            "Inserted Key: [11, 27, 46, \u001b[32m64\u001b[0m, 68, 69, 78, 79, 84, 90, 92, 98]\n",
+            "\n",
+            "Ascending 👇🏻 Insertion Result 😇\n",
+            "[11, 27, 46, 64, 68, 69, 78, 79, 84, 90, 92, 98]\n",
+            "Output Array ====> None\n",
+            "\n",
+            "Time Taken ⌛️: 0.000364 seconds\n",
             "\n"
           ]
         }
