Return value in insertion sort

--- a/python/sorting-algorithms.ipynb
+++ b/python/sorting-algorithms.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNziZnqM92i0XXeGxg45bDm",
+      "authorship_tag": "ABX9TyOjYokUO18V/LpqJkM9FDk7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -259,13 +259,13 @@
         "        print(f\"Inserted Key: [{', '.join(formatted_list)}]\")\n",
         "\n",
         "\n",
-        "    print(f\"\\nAscending 👇🏻 Insertion Result 😇\\n{arr}\")\n",
-        "    # return arr\n"
+        "    print(f\"\\nAscending 👇🏻 Insertion Result 😇\")\n",
+        "    return arr\n"
       ],
       "metadata": {
         "id": "zXoHgsbgoQlg"
       },
-      "execution_count": 15,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -506,9 +506,9 @@
         },
         "collapsed": true,
         "id": "zee0SQ-BWRrg",
-        "outputId": "0fae347b-9f63-4058-9d77-9897e2fda8c2"
+        "outputId": "2f7f480b-74c9-4ada-d0c0-545ac0eac137"
       },
-      "execution_count": 16,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -520,85 +520,93 @@
             "Thank You.\n",
             "You have chosen to see an example with numbers 👏🏼. Let's explore. \n",
             "\n",
-            "Input Array =====> [78, 98, 27, 92, 11, 46, 79, 90, 84, 68, 69, 64]\n",
+            "Input Array =====> [98, 76, 66, 74, 51, 47, 57, 97, 26, 28, 88, 29]\n",
             "\n",
             "Applying Insertion Sort 🙌🏻\n",
             "\n",
-            "Iteration 1 : [Key=98]\n",
-            "Inserted Key: [78, \u001b[32m98\u001b[0m, 27, 92, 11, 46, 79, 90, 84, 68, 69, 64]\n",
+            "Iteration 1 : [Key=76]\n",
+            "Shifting Val: [\u001b[4m98\u001b[0m, 98, 66, 74, 51, 47, 57, 97, 26, 28, 88, 29]\n",
+            "Inserted Key: [\u001b[32m76\u001b[0m, 98, 66, 74, 51, 47, 57, 97, 26, 28, 88, 29]\n",
             "\n",
-            "Iteration 2 : [Key=27]\n",
-            "Shifting Val: [78, \u001b[4m98\u001b[0m, 98, 92, 11, 46, 79, 90, 84, 68, 69, 64]\n",
-            "Shifting Val: [\u001b[4m78\u001b[0m, 78, 98, 92, 11, 46, 79, 90, 84, 68, 69, 64]\n",
-            "Inserted Key: [\u001b[32m27\u001b[0m, 78, 98, 92, 11, 46, 79, 90, 84, 68, 69, 64]\n",
+            "Iteration 2 : [Key=66]\n",
+            "Shifting Val: [76, \u001b[4m98\u001b[0m, 98, 74, 51, 47, 57, 97, 26, 28, 88, 29]\n",
+            "Shifting Val: [\u001b[4m76\u001b[0m, 76, 98, 74, 51, 47, 57, 97, 26, 28, 88, 29]\n",
+            "Inserted Key: [\u001b[32m66\u001b[0m, 76, 98, 74, 51, 47, 57, 97, 26, 28, 88, 29]\n",
             "\n",
-            "Iteration 3 : [Key=92]\n",
-            "Shifting Val: [27, 78, \u001b[4m98\u001b[0m, 98, 11, 46, 79, 90, 84, 68, 69, 64]\n",
-            "Inserted Key: [27, 78, \u001b[32m92\u001b[0m, 98, 11, 46, 79, 90, 84, 68, 69, 64]\n",
+            "Iteration 3 : [Key=74]\n",
+            "Shifting Val: [66, 76, \u001b[4m98\u001b[0m, 98, 51, 47, 57, 97, 26, 28, 88, 29]\n",
+            "Shifting Val: [66, \u001b[4m76\u001b[0m, 76, 98, 51, 47, 57, 97, 26, 28, 88, 29]\n",
+            "Inserted Key: [66, \u001b[32m74\u001b[0m, 76, 98, 51, 47, 57, 97, 26, 28, 88, 29]\n",
             "\n",
-            "Iteration 4 : [Key=11]\n",
-            "Shifting Val: [27, 78, 92, \u001b[4m98\u001b[0m, 98, 46, 79, 90, 84, 68, 69, 64]\n",
-            "Shifting Val: [27, 78, \u001b[4m92\u001b[0m, 92, 98, 46, 79, 90, 84, 68, 69, 64]\n",
-            "Shifting Val: [27, \u001b[4m78\u001b[0m, 78, 92, 98, 46, 79, 90, 84, 68, 69, 64]\n",
-            "Shifting Val: [\u001b[4m27\u001b[0m, 27, 78, 92, 98, 46, 79, 90, 84, 68, 69, 64]\n",
-            "Inserted Key: [\u001b[32m11\u001b[0m, 27, 78, 92, 98, 46, 79, 90, 84, 68, 69, 64]\n",
+            "Iteration 4 : [Key=51]\n",
+            "Shifting Val: [66, 74, 76, \u001b[4m98\u001b[0m, 98, 47, 57, 97, 26, 28, 88, 29]\n",
+            "Shifting Val: [66, 74, \u001b[4m76\u001b[0m, 76, 98, 47, 57, 97, 26, 28, 88, 29]\n",
+            "Shifting Val: [66, \u001b[4m74\u001b[0m, 74, 76, 98, 47, 57, 97, 26, 28, 88, 29]\n",
+            "Shifting Val: [\u001b[4m66\u001b[0m, 66, 74, 76, 98, 47, 57, 97, 26, 28, 88, 29]\n",
+            "Inserted Key: [\u001b[32m51\u001b[0m, 66, 74, 76, 98, 47, 57, 97, 26, 28, 88, 29]\n",
             "\n",
-            "Iteration 5 : [Key=46]\n",
-            "Shifting Val: [11, 27, 78, 92, \u001b[4m98\u001b[0m, 98, 79, 90, 84, 68, 69, 64]\n",
-            "Shifting Val: [11, 27, 78, \u001b[4m92\u001b[0m, 92, 98, 79, 90, 84, 68, 69, 64]\n",
-            "Shifting Val: [11, 27, \u001b[4m78\u001b[0m, 78, 92, 98, 79, 90, 84, 68, 69, 64]\n",
-            "Inserted Key: [11, 27, \u001b[32m46\u001b[0m, 78, 92, 98, 79, 90, 84, 68, 69, 64]\n",
+            "Iteration 5 : [Key=47]\n",
+            "Shifting Val: [51, 66, 74, 76, \u001b[4m98\u001b[0m, 98, 57, 97, 26, 28, 88, 29]\n",
+            "Shifting Val: [51, 66, 74, \u001b[4m76\u001b[0m, 76, 98, 57, 97, 26, 28, 88, 29]\n",
+            "Shifting Val: [51, 66, \u001b[4m74\u001b[0m, 74, 76, 98, 57, 97, 26, 28, 88, 29]\n",
+            "Shifting Val: [51, \u001b[4m66\u001b[0m, 66, 74, 76, 98, 57, 97, 26, 28, 88, 29]\n",
+            "Shifting Val: [\u001b[4m51\u001b[0m, 51, 66, 74, 76, 98, 57, 97, 26, 28, 88, 29]\n",
+            "Inserted Key: [\u001b[32m47\u001b[0m, 51, 66, 74, 76, 98, 57, 97, 26, 28, 88, 29]\n",
             "\n",
-            "Iteration 6 : [Key=79]\n",
-            "Shifting Val: [11, 27, 46, 78, 92, \u001b[4m98\u001b[0m, 98, 90, 84, 68, 69, 64]\n",
-            "Shifting Val: [11, 27, 46, 78, \u001b[4m92\u001b[0m, 92, 98, 90, 84, 68, 69, 64]\n",
-            "Inserted Key: [11, 27, 46, 78, \u001b[32m79\u001b[0m, 92, 98, 90, 84, 68, 69, 64]\n",
+            "Iteration 6 : [Key=57]\n",
+            "Shifting Val: [47, 51, 66, 74, 76, \u001b[4m98\u001b[0m, 98, 97, 26, 28, 88, 29]\n",
+            "Shifting Val: [47, 51, 66, 74, \u001b[4m76\u001b[0m, 76, 98, 97, 26, 28, 88, 29]\n",
+            "Shifting Val: [47, 51, 66, \u001b[4m74\u001b[0m, 74, 76, 98, 97, 26, 28, 88, 29]\n",
+            "Shifting Val: [47, 51, \u001b[4m66\u001b[0m, 66, 74, 76, 98, 97, 26, 28, 88, 29]\n",
+            "Inserted Key: [47, 51, \u001b[32m57\u001b[0m, 66, 74, 76, 98, 97, 26, 28, 88, 29]\n",
             "\n",
-            "Iteration 7 : [Key=90]\n",
-            "Shifting Val: [11, 27, 46, 78, 79, 92, \u001b[4m98\u001b[0m, 98, 84, 68, 69, 64]\n",
-            "Shifting Val: [11, 27, 46, 78, 79, \u001b[4m92\u001b[0m, 92, 98, 84, 68, 69, 64]\n",
-            "Inserted Key: [11, 27, 46, 78, 79, \u001b[32m90\u001b[0m, 92, 98, 84, 68, 69, 64]\n",
+            "Iteration 7 : [Key=97]\n",
+            "Shifting Val: [47, 51, 57, 66, 74, 76, \u001b[4m98\u001b[0m, 98, 26, 28, 88, 29]\n",
+            "Inserted Key: [47, 51, 57, 66, 74, 76, \u001b[32m97\u001b[0m, 98, 26, 28, 88, 29]\n",
             "\n",
-            "Iteration 8 : [Key=84]\n",
-            "Shifting Val: [11, 27, 46, 78, 79, 90, 92, \u001b[4m98\u001b[0m, 98, 68, 69, 64]\n",
-            "Shifting Val: [11, 27, 46, 78, 79, 90, \u001b[4m92\u001b[0m, 92, 98, 68, 69, 64]\n",
-            "Shifting Val: [11, 27, 46, 78, 79, \u001b[4m90\u001b[0m, 90, 92, 98, 68, 69, 64]\n",
-            "Inserted Key: [11, 27, 46, 78, 79, \u001b[32m84\u001b[0m, 90, 92, 98, 68, 69, 64]\n",
+            "Iteration 8 : [Key=26]\n",
+            "Shifting Val: [47, 51, 57, 66, 74, 76, 97, \u001b[4m98\u001b[0m, 98, 28, 88, 29]\n",
+            "Shifting Val: [47, 51, 57, 66, 74, 76, \u001b[4m97\u001b[0m, 97, 98, 28, 88, 29]\n",
+            "Shifting Val: [47, 51, 57, 66, 74, \u001b[4m76\u001b[0m, 76, 97, 98, 28, 88, 29]\n",
+            "Shifting Val: [47, 51, 57, 66, \u001b[4m74\u001b[0m, 74, 76, 97, 98, 28, 88, 29]\n",
+            "Shifting Val: [47, 51, 57, \u001b[4m66\u001b[0m, 66, 74, 76, 97, 98, 28, 88, 29]\n",
+            "Shifting Val: [47, 51, \u001b[4m57\u001b[0m, 57, 66, 74, 76, 97, 98, 28, 88, 29]\n",
+            "Shifting Val: [47, \u001b[4m51\u001b[0m, 51, 57, 66, 74, 76, 97, 98, 28, 88, 29]\n",
+            "Shifting Val: [\u001b[4m47\u001b[0m, 47, 51, 57, 66, 74, 76, 97, 98, 28, 88, 29]\n",
+            "Inserted Key: [\u001b[32m26\u001b[0m, 47, 51, 57, 66, 74, 76, 97, 98, 28, 88, 29]\n",
             "\n",
-            "Iteration 9 : [Key=68]\n",
-            "Shifting Val: [11, 27, 46, 78, 79, 84, 90, 92, \u001b[4m98\u001b[0m, 98, 69, 64]\n",
-            "Shifting Val: [11, 27, 46, 78, 79, 84, 90, \u001b[4m92\u001b[0m, 92, 98, 69, 64]\n",
-            "Shifting Val: [11, 27, 46, 78, 79, 84, \u001b[4m90\u001b[0m, 90, 92, 98, 69, 64]\n",
-            "Shifting Val: [11, 27, 46, 78, 79, \u001b[4m84\u001b[0m, 84, 90, 92, 98, 69, 64]\n",
-            "Shifting Val: [11, 27, 46, 78, \u001b[4m79\u001b[0m, 79, 84, 90, 92, 98, 69, 64]\n",
-            "Shifting Val: [11, 27, 46, \u001b[4m78\u001b[0m, 78, 79, 84, 90, 92, 98, 69, 64]\n",
-            "Inserted Key: [11, 27, 46, \u001b[32m68\u001b[0m, 78, 79, 84, 90, 92, 98, 69, 64]\n",
+            "Iteration 9 : [Key=28]\n",
+            "Shifting Val: [26, 47, 51, 57, 66, 74, 76, 97, \u001b[4m98\u001b[0m, 98, 88, 29]\n",
+            "Shifting Val: [26, 47, 51, 57, 66, 74, 76, \u001b[4m97\u001b[0m, 97, 98, 88, 29]\n",
+            "Shifting Val: [26, 47, 51, 57, 66, 74, \u001b[4m76\u001b[0m, 76, 97, 98, 88, 29]\n",
+            "Shifting Val: [26, 47, 51, 57, 66, \u001b[4m74\u001b[0m, 74, 76, 97, 98, 88, 29]\n",
+            "Shifting Val: [26, 47, 51, 57, \u001b[4m66\u001b[0m, 66, 74, 76, 97, 98, 88, 29]\n",
+            "Shifting Val: [26, 47, 51, \u001b[4m57\u001b[0m, 57, 66, 74, 76, 97, 98, 88, 29]\n",
+            "Shifting Val: [26, 47, \u001b[4m51\u001b[0m, 51, 57, 66, 74, 76, 97, 98, 88, 29]\n",
+            "Shifting Val: [26, \u001b[4m47\u001b[0m, 47, 51, 57, 66, 74, 76, 97, 98, 88, 29]\n",
+            "Inserted Key: [26, \u001b[32m28\u001b[0m, 47, 51, 57, 66, 74, 76, 97, 98, 88, 29]\n",
             "\n",
-            "Iteration 10 : [Key=69]\n",
-            "Shifting Val: [11, 27, 46, 68, 78, 79, 84, 90, 92, \u001b[4m98\u001b[0m, 98, 64]\n",
-            "Shifting Val: [11, 27, 46, 68, 78, 79, 84, 90, \u001b[4m92\u001b[0m, 92, 98, 64]\n",
-            "Shifting Val: [11, 27, 46, 68, 78, 79, 84, \u001b[4m90\u001b[0m, 90, 92, 98, 64]\n",
-            "Shifting Val: [11, 27, 46, 68, 78, 79, \u001b[4m84\u001b[0m, 84, 90, 92, 98, 64]\n",
-            "Shifting Val: [11, 27, 46, 68, 78, \u001b[4m79\u001b[0m, 79, 84, 90, 92, 98, 64]\n",
-            "Shifting Val: [11, 27, 46, 68, \u001b[4m78\u001b[0m, 78, 79, 84, 90, 92, 98, 64]\n",
-            "Inserted Key: [11, 27, 46, 68, \u001b[32m69\u001b[0m, 78, 79, 84, 90, 92, 98, 64]\n",
+            "Iteration 10 : [Key=88]\n",
+            "Shifting Val: [26, 28, 47, 51, 57, 66, 74, 76, 97, \u001b[4m98\u001b[0m, 98, 29]\n",
+            "Shifting Val: [26, 28, 47, 51, 57, 66, 74, 76, \u001b[4m97\u001b[0m, 97, 98, 29]\n",
+            "Inserted Key: [26, 28, 47, 51, 57, 66, 74, 76, \u001b[32m88\u001b[0m, 97, 98, 29]\n",
             "\n",
-            "Iteration 11 : [Key=64]\n",
-            "Shifting Val: [11, 27, 46, 68, 69, 78, 79, 84, 90, 92, \u001b[4m98\u001b[0m, 98]\n",
-            "Shifting Val: [11, 27, 46, 68, 69, 78, 79, 84, 90, \u001b[4m92\u001b[0m, 92, 98]\n",
-            "Shifting Val: [11, 27, 46, 68, 69, 78, 79, 84, \u001b[4m90\u001b[0m, 90, 92, 98]\n",
-            "Shifting Val: [11, 27, 46, 68, 69, 78, 79, \u001b[4m84\u001b[0m, 84, 90, 92, 98]\n",
-            "Shifting Val: [11, 27, 46, 68, 69, 78, \u001b[4m79\u001b[0m, 79, 84, 90, 92, 98]\n",
-            "Shifting Val: [11, 27, 46, 68, 69, \u001b[4m78\u001b[0m, 78, 79, 84, 90, 92, 98]\n",
-            "Shifting Val: [11, 27, 46, 68, \u001b[4m69\u001b[0m, 69, 78, 79, 84, 90, 92, 98]\n",
-            "Shifting Val: [11, 27, 46, \u001b[4m68\u001b[0m, 68, 69, 78, 79, 84, 90, 92, 98]\n",
-            "Inserted Key: [11, 27, 46, \u001b[32m64\u001b[0m, 68, 69, 78, 79, 84, 90, 92, 98]\n",
+            "Iteration 11 : [Key=29]\n",
+            "Shifting Val: [26, 28, 47, 51, 57, 66, 74, 76, 88, 97, \u001b[4m98\u001b[0m, 98]\n",
+            "Shifting Val: [26, 28, 47, 51, 57, 66, 74, 76, 88, \u001b[4m97\u001b[0m, 97, 98]\n",
+            "Shifting Val: [26, 28, 47, 51, 57, 66, 74, 76, \u001b[4m88\u001b[0m, 88, 97, 98]\n",
+            "Shifting Val: [26, 28, 47, 51, 57, 66, 74, \u001b[4m76\u001b[0m, 76, 88, 97, 98]\n",
+            "Shifting Val: [26, 28, 47, 51, 57, 66, \u001b[4m74\u001b[0m, 74, 76, 88, 97, 98]\n",
+            "Shifting Val: [26, 28, 47, 51, 57, \u001b[4m66\u001b[0m, 66, 74, 76, 88, 97, 98]\n",
+            "Shifting Val: [26, 28, 47, 51, \u001b[4m57\u001b[0m, 57, 66, 74, 76, 88, 97, 98]\n",
+            "Shifting Val: [26, 28, 47, \u001b[4m51\u001b[0m, 51, 57, 66, 74, 76, 88, 97, 98]\n",
+            "Shifting Val: [26, 28, \u001b[4m47\u001b[0m, 47, 51, 57, 66, 74, 76, 88, 97, 98]\n",
+            "Inserted Key: [26, 28, \u001b[32m29\u001b[0m, 47, 51, 57, 66, 74, 76, 88, 97, 98]\n",
             "\n",
             "Ascending 👇🏻 Insertion Result 😇\n",
-            "[11, 27, 46, 64, 68, 69, 78, 79, 84, 90, 92, 98]\n",
-            "Output Array ====> None\n",
+            "Output Array ====> [26, 28, 29, 47, 51, 57, 66, 74, 76, 88, 97, 98]\n",
             "\n",
-            "Time Taken ⌛️: 0.000364 seconds\n",
+            "Time Taken ⌛️: 0.000415 seconds\n",
             "\n"
           ]
         }
